# spbu_2020_c_homeworks

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_with_lint.yml
homework1/: task1.c  task2.c  task3.c  task4.c  task5.c
homework2/: task1.c  task2.c  task3.c  task4.c  task5.c
homework3/: task1.c  task2.c
homework4/: task1.c  task2.c  task3.c
homework5/: task1.c  task2.c  trees_demo.c
homework6/: task1.c
homework7/: task1.c  task2.c
homework8/: task1.c
homework9/: parser.c  parser.h  task1.c
test1/: task1.c  task2.c  task2_try2.c  vector.c  vector.h
test2/: task1.c  task2.c  task3.c
test3/: task1.c  task3.c
tests/: numericListTest.c  numericOperationsTest.c
