cmake_minimum_required(VERSION 3.13)
project(spbu_2020_c_homeworks C)

set(CMAKE_C_STANDARD 11)

add_library(numericOperations library/numeric/operations.c)
target_link_libraries(numericOperations PRIVATE m)
add_library(numericIO library/numeric/io.c)
add_library(numericList library/numeric/list.c)
add_library(numericStack library/numeric/stack.c)

add_executable(task1_1 homework1/task1.c)
add_executable(task1_2 homework1/task2.c)
target_link_libraries(task1_2 numericOperations)
add_executable(task1_3 homework1/task3.c)
add_executable(task1_4 homework1/task4.c)
add_executable(task1_5 homework1/task5.c)

add_executable(task2_1 homework2/task1.c)
target_link_libraries(task2_1 numericOperations numericIO)
add_executable(task2_2 homework2/task2.c)
target_link_libraries(task2_2 numericOperations numericIO)
add_executable(task2_3 homework2/task3.c)
target_link_libraries(task2_3 numericIO)
add_executable(task2_4 homework2/task4.c)
target_link_libraries(task2_4 numericOperations numericIO)
add_executable(task2_5 homework2/task5.c)
target_link_libraries(task2_5 numericIO)

add_executable(task3_1 homework3/task1.c)
target_link_libraries(task3_1 numericList)
add_executable(task3_2 homework3/task2.c)
target_link_libraries(task3_2 numericIO numericList)

add_executable(task4_1 homework4/task1.c)
target_link_libraries(task4_1 numericIO numericStack)
